@@ -3,6 +3,7 @@ package com.walterjwhite.modules.workflow.api.service;
 import com.walterjwhite.modules.workflow.api.model.WorkflowStepExecution;
 import com.walterjwhite.modules.workflow.api.service.executor.WorkflowStepExecutor;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 
 public interface WorkflowEngine {
   // To be called to start a workflow, ie. CreateRequest entity would be passed here to start the
@@ -10,8 +11,9 @@ public interface WorkflowEngine {
   WorkflowStepExecution process(Serializable input);
 
   default WorkflowStepExecutor get(WorkflowStep workflowStep)
-      throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+      throws ClassNotFoundException, IllegalAccessException, InstantiationException,
+          NoSuchMethodException, InvocationTargetException {
     final Class workflowStepExecutorClass = Class.forName(workflowStep.getName());
-    return (WorkflowStepExecutor) workflowStepExecutorClass.newInstance();
+    return (WorkflowStepExecutor) workflowStepExecutorClass.getDeclaredConstructor().newInstance();
   }
 }
